@@ -1,3 +1,12 @@
+2012-06-20  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline
+	2012-02-27  Mikael Pettersson  <mikpe@it.uu.se>
+
+	PR libffi/52223
+	* Makefile.am (FLAGS_TO_PASS): Define.
+	* Makefile.in: Regenerate.
+
 2011-05-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	Backport from mainline:
